Cleanup and update: Add .gitignore, remove cache files, update modules

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,14 @@ WHATSAPP_PHONE_ID=
 NTFY_URL=http://localhost:8090
 NTFY_ACCESS_TOKEN=
 NTFY_TOPIC_PREFIX=educrm
+
+# Google Calendar Integration (Optional)
+# 1. Go to https://console.cloud.google.com/
+# 2. Create project → Enable Calendar API → Create OAuth 2.0 credentials
+# 3. Set redirect URI to: https://your-domain.com/modules/appointments/google-callback.php
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+
+# Timezone for calendar events
+APP_TIMEZONE=Asia/Kathmandu
